Update requirements and Dockerfile for torch-scatter installation
- Comment out torch-scatter version requirement in requirements.txt
- Add explicit torch-scatter installation in Dockerfile using PyG wheel URL
- Ensure compatibility with torch-2.0.1 and CUDA 11.7

--- a/my_hdce_project/Dockerfile
+++ b/my_hdce_project/Dockerfile
@@ -7,6 +7,9 @@ curl \
 
 RUN pip install --no-cache-dir torch>=1.13.0
 
+RUN pip install --no-cache-dir torch-scatter -f \
+  https://data.pyg.org/whl/torch-2.0.1+cu117.html
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
